# llama-safety-patch

./: LICENSE  README.md  pyproject.toml
data/: orbench_toxic_divergent.jsonl
results/: detailed_results.json  summary.json  toxic_patched_L11_a07.json
src/: eval_benign_kl_and_refusal.py  llama_pair.py  make_divergent_set.py  patch_sweep_single_prompt.py  patch_toxic_run_and_save.py
