[build-system]
requires = ["setuptools>=60.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-safety-patch"
version = "0.1.0"
description = "A short description here"
authors = [
  { name = "Daanu", email = "daanuyzk@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
  "transformers>=4.30",
  "torch>=2.0",
  "accelerate>=0.20",
  "datasets",
  "pandas>=2.0.3",
  "scikit-learn>=1.3.2",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = []

[tool.uv]

[tool.black]
line-length = 88
target-version = ["py38"]